--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <img class = "szForNZXTInInfo"src="img/better.png" alt="nzxtPre">
   </div>
   <div class="col-lg-8 col-md-8">
-      <h1 class = "horCenter">The Start of a Journey</h1>
-    <h3 class = "margForTextMoreInfo" style = "text-indent:2rem;"> Lead the way into
+      <h1 class = "horCenter">Ready For Anything</h1>
+    <h3 class = "margForTextMoreInfo" style = "text-indent:2rem;"> The Starter + PC is built to tackle any game thrown at it. Building upon this, This pc has the ability to stream and outperfom most other Pcs currently on the market.
     </h3>
   </div>
   <div class="col-lg-4 col-md-4">
@@ -195,7 +195,7 @@
 
   </div>
   <div class="col-lg-8 col-md-8">
-      <h1 class = "horCenter">The Start of a Journey</h1>
+      <h1 class = "horCenter">The Best of the Best</h1>
     <h3 class = "margForTextMoreInfo" style = "text-indent:2rem;">The Starter Pro PC comes packed with impressively powerful components and it is designed to be the ultimate Gaming PC.
     </h3>
 
