--- a/index.html
+++ b/index.html
@@ -417,13 +417,13 @@
 
 
 
-      <span class="tooltip">Facebook</span>
-      <span><i class="fab fa-facebook-f"></i></span>
+      
+<a href="www.linkedin.com/in/michael-arzanipourr-a219b6244"><span class="tooltip">Linkedin</span>
+      <span><i class="fab fa-linkedin"></i></span></a>
 
-
-      <span class="tooltip">Twitter</span>
-      <span><i class="fab fa-twitter"></i></span>
-
+      
+<a href="twitter.com"><span class="tooltip">Twitter</span>
+      <span><i class="fab fa-twitter"></i></span></a>
 
       <span class="tooltip">Instagram</span>
       <span><i class="fab fa-instagram"></i></span>
